[package]
name = "rawncc"
version = "0.1.0"
authors = ["Piotr Zaczkowski <pzaczkowski@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "0.23", features = ["clang_8_0"] }
# clang-sys = { version = "0.29", features = ["clang_9_0"] }
env_logger = "0.7"
lazy_static = "1.4"
log = "0.4"
regex = "1"
structopt = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
